# pregex

./: .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: .pypi_upload.yml  ci.yml  main.yml
docs/: how-to-build.txt  requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  readme.md  readme.rst  requirements.txt
docs/source/docstring/: modules.rst  pregex.rst
docs/source/documentation/: best-practices.rst  covering-the-basics.rst  importing-practices.rst  regex-to-pregex.rst  subpackages.rst
docs/source/documentation/modules/core/: assertions.rst  classes.rst  groups.rst  operators.rst  pre.rst  quantifiers.rst  tokens.rst
docs/source/documentation/modules/meta/: essentials.rst
src/pregex/: __init__.py  assertions.py  classes.py  exceptions.py  groups.py  operators.py  pre.py  quantifiers.py  tokens.py
src/pregex/core/: __init__.py  assertions.py  classes.py  exceptions.py  groups.py  operators.py  pre.py  quantifiers.py  tokens.py
src/pregex/meta/: __init__.py  essentials.py
tests/: test_assertions.py  test_classes.py  test_core_assertions.py  test_core_classes.py  test_core_groups.py  test_core_operators.py  test_core_pre.py  test_core_quantifiers.py  test_core_tokens.py  test_groups.py  test_meta_essentials.py  test_operators.py  test_pre.py  test_quantifiers.py  test_tokens.py
